--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
+/*  couleur 1: #FFE7B1; couleur2: #5977B2; couleur 3: #B1CCFF;  */
+
 body{
 	font-family: 'Bad Script', cursive;
+	background-color:#FFE7B1;
+}
+h1{
+	font-size:40px;
+	color:#5977B2;
+}
+p{
+	font-size:20px;
+}
+header{
+	border-bottom: 5px dotted #5977B2;
+	
+}
+.block_1{
+	height:500px;
+}
+footer{
+	background-color:#5977B2;
+	height:100px;
+	color:#FFE7B1;
+}
+.no_padding{
+	padding:0px;
 }
