--- a/style.css
+++ b/style.css
@@ -27,11 +27,21 @@ footer{
 .no_padding{
 	padding:0px;
 }
-.btn{
-	width: 125px;
-	height: 65px;
-	font-size:32px;
-	font-weight:bold;
-	color:#5977B2;
-	background-color:#B1CCFF;
+.cookie_img{
+	width: 95%;
+	height: 95%;
+	margin-top:40px;
+}
+.score{
+	height:100px;
+}
+.score1{
+	margin-top:30px;
+	margin-left:520px;
+	border:5px double #5977B2;
+}
+.chat{
+	height:65px;
+	width:150px;
+	font-size:30px;
 }
