--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ footer{
 	margin-top:50px;
 	margin-left:570px;
 	border:5px double #5977B2;
+	border-radius: 25px 25px 25px 25px;
 }
 .chat{
 	height:auto;
