--- a/style.css
+++ b/style.css
@@ -5,18 +5,23 @@ body{
 	background-color:#FFE7B1;
 }
 h1{
-	font-size:40px;
-	color:#5977B2;
+	font-size:45px;
+	color:#FFE7B1;
 }
 p{
 	font-size:20px;
 }
 header{
-	border-bottom: 5px dotted #5977B2;
-	
+	background-color:#5977B2;
+	color:#FFE7B1;
+	border-bottom: 5px dotted #FFE7B1;
 }
 .block_1{
 	height:500px;
+	background-image:url("elements/kitch1.png");
+	background-position: 43% -1%;
+	background-repeat: no-repeat;
+	background-size: 64% 102%;
 }
 footer{
 	background-color:#5977B2;
@@ -33,25 +38,34 @@ footer{
 	margin-top:80px;
 }
 .cookie_img:active{
-	width: 110%;
-	height: 110%;
+	width: 100%;
+	height: 100%;
 	margin-top:65px;
 }
-.score{
-	height:100px;
+.block_score{
+	height:150px;
 }
 .score1{
-	margin-top:50px;
-	margin-left:570px;
 	border:5px double #5977B2;
 	border-radius: 25px 25px 25px 25px;
+	margin-top:35px;
 }
 .chat{
 	height:auto;
 	width:150px;
 	font-size:30px;
+
 }
 .bouton{
 	height:75px;
 	width:125px;
+	background-color:#FFE7B1;
+	border:5px double #5977B2;
+	border-radius: 25px 25px 25px 25px;
+	margin-left:100px;
+}
+.fleur{
+	height:40px;
+	background-image:url("elements/fleurs1.png");
+	background-size:40px 40px;
 }
