simplification du css

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ footer{
 	width:125px;
 	background-color:#FFE7B1;
 	border:5px double #5977B2;
-	border-radius: 25px 25px 25px 25px;
+	border-radius: 25px;
 	margin-left:100px;
 }
 .fleur{
