--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h1{
 }
 p{
 	font-size:20px;
+    color:#5977B2;
 }
 header{
 	background-color:#5977B2;
@@ -50,24 +51,37 @@ footer{
 }
 .score1{
 	border:5px double #5977B2;
-	border-radius: 25px 25px 25px 25px;
+	border-radius: 25px ;
 	margin-top:35px;
-}
-.chat{
-	height:auto;
+    height:auto;
 	width:150px;
 	font-size:30px;
-    background-color:#FFE7B1;
-
 }
 .bouton{
 	height:75px;
 	width:125px;
 	background-color:#FFE7B1;
-	border:5px double #5977B2;
-	border-radius: 25px 25px 25px 25px;
-	margin-left:100px;
+	border:5px dotted #455F41;
+	border-radius: 25px;
+	margin-left: 165px;
+    margin-top: 65px;
+    font-weight: bold;
+    color:#5977B2;
+    
 }
+.bouton2{
+	height:auto;
+	width:170px;
+	background-color:#FFE7B1;
+	border:5px double #455F41;
+	border-radius: 25px;
+	margin-left: 165px;
+    margin-top: 65px;
+    font-size: 26px;
+    font-weight: bold;
+    color:#5977B2;
+}
+
 .fleur{
 	height:40px;
 	background-image:url("elements/fleurs1.png");
